[gd_scene load_steps=6 format=3 uid="uid://bdsmhejafkvun"]

[ext_resource type="FontFile" uid="uid://c5ickjkftypyd" path="res://fonts/Kenney Pixel.ttf" id="1_48c2t"]
[ext_resource type="Script" uid="uid://dnc6ar6onnxux" path="res://scenes/hud/hud.gd" id="1_cgeww"]

[sub_resource type="LabelSettings" id="LabelSettings_cgeww"]
font = ExtResource("1_48c2t")
font_size = 32
font_color = Color(0.333333, 0.627451, 0.345098, 1)
outline_size = 8
outline_color = Color(0.137255, 0.133333, 0.156863, 1)

[sub_resource type="LabelSettings" id="LabelSettings_48c2t"]
font = ExtResource("1_48c2t")
font_size = 32
font_color = Color(0.901961, 0.572549, 0.541176, 1)
outline_size = 8
outline_color = Color(0.137255, 0.133333, 0.156863, 1)

[sub_resource type="LabelSettings" id="LabelSettings_c45xl"]
font = ExtResource("1_48c2t")
font_size = 32
font_color = Color(0.329412, 0.729412, 0.823529, 1)
outline_size = 8
outline_color = Color(0.137255, 0.133333, 0.156863, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_cgeww")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainerLabel" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="RockLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainerLabel"]
layout_mode = 2
text = "Rock:"
label_settings = SubResource("LabelSettings_cgeww")

[node name="ScissorsLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainerLabel"]
layout_mode = 2
text = "Scissors: "
label_settings = SubResource("LabelSettings_48c2t")

[node name="PaperLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainerLabel"]
layout_mode = 2
text = "Paper:"
label_settings = SubResource("LabelSettings_c45xl")

[node name="VBoxContainerCount" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="RockCountLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainerCount"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_cgeww")

[node name="ScissorsCountLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainerCount"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_48c2t")

[node name="PaperCountLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainerCount"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_c45xl")
